# reposition

./: CMakeLists.txt  README.md  cablemath.tex  eigentest.py  index.html  main.js  package.json  pusk.wxmx  reposition.js  reposition_test.py  solve.c  solve.h  solve.py  solve.pyx  solve.tex  test-server.py  test.py  vite.config.js
assets/: index-B5Wovvte.js  index-BK7z1a5h.css  index-D1KW-TyR.js  index-DzyBKTgv.js  reposition_wasm-BPsm-dCn.wasm
reposition/: index.html  vite.config.js
reposition/src/: main.js  style.css
